2008-01-04  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-domain.c: add documentation
	(soup_auth_domain_set_filter): take a GDestroyNotify, for better
	bindability

	* libsoup/soup-auth-domain-basic.c:
	* libsoup/soup-auth-domain-digest.c: Add documentation. Replace
	authentication signals with more-easily-bindable authentication
	callbacks (with GDestroyNotifys).
	(soup_auth_domain_digest_evil_check_password): Add this for the
	benefit of code that depends on being able to do the equivalent
	of the old soup_server_auth_check_passwd().

2008-01-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.h (SoupMessageBody): add data and
	length parameters like SoupBuffer, to make this easier for callers
	to use.

	* libsoup/soup-message-body.c (soup_message_body_append)
	(soup_message_body_append_buffer)
	(soup_message_body_truncate): Update body->length
	(soup_message_body_flatten): Fill in body->data (and NUL-terminate
	it as an added bonus).

	* libsoup/soup-message.c (got_body): flatten the newly-gotten
	body.
	(soup_message_get_request, soup_message_get_response): gone
	
	* libsoup/soup-message-client-io.c (get_request_headers): 
	* libsoup/soup-message-server-io.c (get_response_headers): 
	* libsoup/soup-soap-message.c (soup_soap_message_parse_response):
	* tests/*.c: simplify

2008-01-02  Dan Winship  <danw@gnome.org>

	* libsoup/Makefile.am (soup_headers): oops, move soup-auth.h here

2008-01-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-form.c: new HTML-form-related methods (just URI
	decoding/encoding at the moment).

	* libsoup/soup-server.h (SoupServerCallback): change the prototype
	to include the decoded path and query rather than the undecoded
	URI.

	* libsoup/soup-server.c (call_handler): %-decode the URI path
	before looking up a handler. Decode query if available. Pass path
	and query to the callback.

	* libsoup/soup-auth-domain.c (soup_auth_domain_covers): fix this
	to %-decode the URI path before testing it
